--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
-    <body onload="getanswer(document.getElementById('querybox').value)">
+    <body>
         <h3>Search for a movie</h3>
         <input id="querybox"><span> > Press enter inside the box to submit</span>
         <hr>
