--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 var posterurl =data.Poster;
                 document.getElementById('movie').innerHTML="<h1>"
-                    +title+"</h1><br> <iframe width='560' height='315' src='"+movie+"'></iframe><br><p> Year Released:"+year
+                    +title+"</h1><br> <iframe allowfullscreen width='560' height='315' src='"+movie+"'></iframe><br><p> Year Released:"+year
                         +"</p> <br><p> Director: "+director+"</p> <br> <p> IMDB page: <a href='"
                             +imdburl+"'target='_blank'>"+imdburl+"</a></p><iframe width='560' height='315' src='"+movie+"' "; }); 
             }
