--- a/index.html
+++ b/index.html
@@ -12,12 +12,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <style>
+            html,body        {height:100%;}
+            .wrapper         {width:100%;height:100%;margin:0 auto;}
+            .h_iframe        {position:relative;}
+            .h_iframe iframe {width:100%; height:100%;}
+        </style>
     </head>
     <body>
+        <div class="wrapper"> 
         <h3>Search for a movie</h3>
         <input id="querybox"><span> > Press enter inside the box to submit</span>
         <hr>
-        <div id="movie"></div> 
+            <div class="h_iframe">
+                <div id="movie"></div>
+            </div>
+        </div>
 
         <script>
             var input = document.getElementById("querybox");
@@ -41,12 +51,13 @@
                 var director = data.Director; 
                 var imdburl="https://www.imdb.com/title/"+data.imdbID+"/";
                 var movie = "https://vidsrc.to/embed/movie/"+data.imdbID+"/"
+                var plot = data.Plot
 
                 var posterurl =data.Poster;
                 document.getElementById('movie').innerHTML="<h1>"
-                    +title+"</h1><br> <iframe allowfullscreen width='560' height='315' src='"+movie+"'></iframe><br><p> Year Released:"+year
-                        +"</p> <br><p> Director: "+director+"</p> <br> <p> IMDB page: <a href='"
-                            +imdburl+"'target='_blank'>"+imdburl+"</a></p><iframe width='560' height='315' src='"+movie+"' "; }); 
+                    +title+"</h1><br> <iframe sandbox='allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation' allowfullscreen src='"+movie+"'></iframe><br><p> Year Released: "+year
+                        +"</p> <br><p> Description: "+plot+" </p> <br><p> Director: "+director+"</p> <br> <p> IMDB page: <a href='"
+                            +imdburl+"'target='_blank'>"+imdburl+"</a></p>";}); 
             }
         </script>
     </body>
