--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             html,body        {height:100%;}
             .wrapper         {width:100%;height:100%;margin:0 auto;}
             .h_iframe        {position:relative;}
-            .h_iframe iframe {width:100%; height:100%;}
+            .h_iframe iframe {width:80%; height:100vh;}
         </style>
     </head>
     <body>
