--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 var year = data.Year; 
                 var director = data.Director; 
                 var imdburl="https://www.imdb.com/title/"+data.imdbID+"/";
-                var movie = "https://vidsrc.to/embed/movie/"+data.imdbID+"/"
+                var movie = "https://vidsrc.me/embed/movie/"+data.imdbID+"/"
                 var plot = data.Plot
 
                 var posterurl =data.Poster;
